--- a/projetoReceitas/style.css
+++ b/projetoReceitas/style.css
@@ -1,4 +1,18 @@
 
+body {
+    background-image: url(assets/bg-image.jpg);
+    background-size: cover;
+}
+
+#page {
+    box-sizing: border-box; /* corrigir a soma dos paddings */
+    width: 800px;
+    height: 24px;
+    background-color: #f0E8C2;
+    border-radius: 24px; /* arredondamento de borda*/
+    margin: 48px auto;
+}
+
 img {
     border-radius: 16px;
 }
